--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gsap": "^3.12.2",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.3"
   },
   "devDependencies": {
     "eslint": "^8",
